<resources>
    <string name="app_name">ORcycle</string>
    <string name="title_section4">User</string>
    <string name="title_section3">Reports</string>
    <string name="title_section2">Trips</string>
    <string name="title_section1">Record</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_input">Record</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">ORcycle</string>
    <string name="title_activity_trip_purpose">Trip Purpose</string>
    <string name="title_activity_trip_questions">Trip Description</string>
    <string name="title_activity_note_questions">Report Description</string>
    <string name="title_activity_trip_map">Trip Map</string>
    <string name="title_activity_saved_trips">Saved Trips</string>
    <string name="title_activity_user_feedback">User Feedback</string>
    <string name="title_activity_note_type">Report Type</string>
    <string name="title_activity_note_detail">Report Details</string>
    <string name="title_activity_note_map">Report Map</string>
    <string name="title_activity_saved_notes">Saved Reports</string>
    <string name="title_activity_rate_segment">Rate Segment</string>
    <string name="title_activity_rate_segment_detail">Rating Details</string>
    <string name="title_activity_user_info">Biking Habits</string>
    <string name="title_activity_dsa_dialog">DsaDialogActivity</string>
    <string name="title_orcycle_instructions">Instructions</string>
    <string name="title_activity_report_accidents">ORcycle</string>
    <string name="title_activity_report_safety_issues">ORcycle</string>
    <string name="title_activity_reminders">Reminders</string>
    <string name="title_activity_edit_reminder">Add/Edit Reminder</string>
    <string name="title_activity_query_start">ORcycle Reminder!</string>
    <string name="webview_title_orcycle_maps">ORcycle Maps</string>
    <string name="post_url">http://orcycle2.cecs.pdx.edu/post/</string>
    <string name="btn_lbl_start">Start Trip</string>
    <string name="btn_lbl_pause">Pause</string>
    <string name="btn_lbl_resume">Resume</string>
    <string name="btn_lbl_finish">Finish</string>
    <string name="btn_lbl_report">Report</string>
    <string name="btn_lbl_rate_segment_start">Rate segment&#8230;</string>
    <string name="btn_lbl_rate_segment_finish">Enter end of segment</string>
    <string name="chooser_image">Select Image</string>
    <string name="fmi_query_user_profile_title">Tell us about your biking&#8230;</string>
    <string name="fmi_query_user_profile">If you are new to ORcycle, tell us about your biking habits.&#160;&#160;Please
answer at least the first 6 questions.</string>
    <string name="fmi_qup_dialog_ok">OK</string>
    <string name="fmi_qup_dialog_later">Later</string>
    <string name="fmi_no_gps">Your phone\'s GPS is disabled. ORCycle needs GPS to determine your location.\n\nGo to System Settings now to enable GPS?</string>
    <string name="fmi_no_gps_dialog_ok">GPS Settings&#8230;</string>
    <string name="fmi_no_gps_dialog_cancel">Cancel</string>
    <string name="fmi_no_gps_data">No GPS data acquired; nothing to submit.</string>
    <string name="fmi_dtf_save_trip">Save Trip</string>
    <string name="fmi_dtf_query_save">Do you want to save this trip?</string>
    <string name="fmi_dtf_discard">Discard</string>
    <string name="fmi_dtf_resume">Resume</string>
    <string name="fmi_dtf_save">Save</string>
    <string name="fmi_reset_duration">00:00:00</string>
    <string name="fmi_reset_distance">0.0 miles</string>
    <string name="fmi_reset_avg_speed">0.0 mph</string>
    <string name="fmi_reset_calories">0.0 kcal</string>
    <string name="fmi_reset_co2">0.0 lbs</string>
    <string name="fmi_service_connected">Recording service connected&#8230;</string>
    <string name="fmi_welcome_title">Welcome to ORcycle!</string>
    <string name="fmi_welcome_continue">Continue</string>
    <string name="fmi_welcome_instructions">Instructions</string>
    <string name="fmi_welcome_message">This app lets you record bicycle trips, display trip maps,
and provide bicycle safety feedback. You can report crashes, near-misses or safety issues from anywhere:
home, office, along your trip, etc. <i>by</i> pressing the “Report” button. To record a trip you need to press
start/finish buttons before/after your trip.</string>
    <string name="fmi_how_to_title">How To</string>
    <string name="fmi_how_to_continue">Continue</string>
    <string name="fmi_how_to_message">How to message goes here!</string>
    <string name="tqi_qsm_dialog_title">Save Trip</string>
    <string name="tqi_qsm_dialog_message">“You can now report crash events or locations with safety issues along this trip&#8230;</string>
    <string name="tqi_qsm_dialog_ok">OK</string>
    <string name="tqi_qsm_dialog_later">Later</string>
    <string name="tqa_alert_mandatory_title">Save Trip</string>
    <string name="tqa_alert_title">Save Trip FYI:</string>
    <string name="tqa_alert_user_about_later">You can later go to \"Trips\", select a trip and report crash events or locations with safety issues.</string>
    <string name="tqa_alert_answer_required_questions">Please answer all required questions.</string>
    <string name="tqa_alert_OK">OK</string>
    <string name="tqa_alert_repeated_trips">Data for this %s trip will be logged and uploaded.<b>If you repeat the same route there is no need to log it again</b>.
Please use ORcycle to log new trip purposes, routes, or safety locations.</string>
    <string name="ami_elapsed_time">Elapsed time</string>
    <string name="ami_initial_elapsed_time">00:00:00</string>
    <string name="ami_initial_miles">0.0 miles</string>
    <string name="ami_initial_mph">0.0 mph</string>
    <string name="ami_distance">Distance</string>
    <string name="ami_avg_speed">Avg. Speed</string>
    <string name="ami_calories">Calories</string>
    <string name="ami_initial_calories">0.0 kcal</string>
    <string name="ami_co2">CO2 Offset</string>
    <string name="ami_initial_co2">0.0 lbs</string>
    <string name="misc_generally_long_text_string">The quick brown fox jumps over the lazy dog</string>
    <string name="misc_longest_date_string">September 27, 2014 11:02 PM</string>
    <string name="atm_trip_purpose">Trip Purpose:</string>
    <string name="atm_trip_info_long_string">Trip info: The quick brown fox jumps over the lazy dog</string>
    <string name="atm_crosshair_image_description">Map Crosshairs</string>
    <string name="atm_crosshair_distance_message">Cannot mark location! Target must be within 150 feet of bike path.</string>
    <string name="note_note_asset">Report this asset</string>
    <string name="note_water_fountain">Water fountain</string>
    <string name="note_secret_passage">Secret passage</string>
    <string name="note_public_restroom">Public restroom</string>
    <string name="note_bike_shop">Bike shop</string>
    <string name="note_bike_rack">Bike parking</string>
    <string name="note_misc">Misc&#8230;</string>
    <string name="note_pavement_issue">Pavement issue</string>
    <string name="note_traffic_signal">Inadequate traffic signal</string>
    <string name="note_enforcement">Enforcement issue</string>
    <string name="note_needs_bike_rack">Needs bike parking</string>
    <string name="note_bike_lane_issue">Bike lane issue</string>
    <string name="note_note_issue">Report this issue</string>
    <string name="note_note_asset_details">Anything else we should map to help fellow cyclists? Share the details.</string>
    <string name="note_water_fountain_details">Here\'s a spot to fill your water bottle&#8230; stay hydrated!</string>
    <string name="note_secret_passage_details">Here\'s an access way under the tracks, through a park, onto a trail, or over a ravine. </string>
    <string name="note_public_restroom_details">Here\'s a spot with public restroom facilities.</string>
    <string name="note_bike_shop_details">Need a quick fix to get back in the saddle? Here\'s a bicycle shop to help. </string>
    <string name="note_bike_rack_details">Here\'s a safe and secure place to park bicycles. Please only include racks or other objects intended for bikes.</string>
    <string name="note_misc_details">Anything notable about this spot?</string>
    <string name="note_pavement_issue_details">Here\'s a spot where the pavement needs to be repaired. This could be a pothole, rough pavement, excessive gravel in the road, a problematic sewer grate, etc.</string>
    <string name="note_traffic_signal_details">Here\'s a signal that you can\'t activate with your bike.</string>
    <string name="note_enforcement_details">The bike lane is always blocked here, cars disobey "no right on red"&#8230; or anything else where enforcement can help make cycling safer. </string>
    <string name="note_needs_bike_rack_details">You wish you had a bike rack at this spot to securely park your bike.</string>
    <string name="note_bike_lane_issue_details">The bike lane ends abruptly here or is too narrow to safely ride in.</string>
    <string name="note_note_issue_details">Anywhere else in need of improvement: want a sign, or a bike lane? Share the details.</string>
    <string name="segment_rating_a">A Rating</string>
    <string name="segment_rating_b">B Rating</string>
    <string name="segment_rating_c">C Rating</string>
    <string name="segment_rating_d">D Rating</string>
    <string name="segment_rating_e">E Rating</string>
    <string name="segment_rating_f">F Rating</string>
    <string name="segment_rating_details_a">A Rating Detailed</string>
    <string name="segment_rating_details_b">B Rating Detailed</string>
    <string name="segment_rating_details_c">C Rating Detailed</string>
    <string name="segment_rating_details_d">D Rating Detailed</string>
    <string name="segment_rating_details_e">E Rating Detailed</string>
    <string name="segment_rating_details_f">F Rating Detailed</string>
    <string name="atq_email_hint">name@domain</string>
    <string name="atq_requiredEntries">* = Required entries</string>
    <string name="atq_specific_questions">Specific Trip Related Questions</string>
    <string name="snli_content_description_note_severity">Report Severity</string>
    <string name="anq_requiredEntries">* = Required entries</string>
    <string name="ats_tell_us_about_yourself">Tell us about your biking habits&#8230;</string>
    <string name="ats_getting_started">Get started with ORCycle&#8230;</string>
    <string name="ats_provide_feedback">Provide feedback about the app&#8230;</string>
    <string name="ats_privacy_policy">ORcycle\'s Privacy Policy&#8230;</string>
    <string name="ats_remind_me">Remind me to log a trip&#8230;</string>
    <string name="ats_tutorial">See Tutorial&#8230;</string>
    <string name="ats_more">More</string>
    <string name="dsaNoteImageContentDescription">How to description</string>
    <string name="qsa_message">Would you like to start ORcycle?</string>
    <string name="qsa_btn_positive">Yes</string>
    <string name="qsa_btn_negative">No</string>
    <string name="turorial_btn_previous">&lt;&lt;</string>
    <string name="turorial_btn_next">&gt;&gt;</string>
    <string name="turorial_btn_done_main_input">Start ORcycle!</string>
    <string name="and_cd_add_photo">Add Photo</string>
    <string name="and_tv_add">Add</string>
    <string name="and_tv_photo">Photo</string>
    <string name="and_cd_note_image">Report Image</string>
    <string name="and_tv_additional_details">Please add bicycle direction of travel (e.g. northbound) and any additional details:</string>
    <string name="btnTextArtReportCrash">Report crash or near miss</string>
    <string name="btnTextArtReportSafetyIssue">Report safety issue</string>
    <string name="btnTextArtCancel">Cancel</string>
    <string name="textArtMessage">Please choose the type of report you want to file.</string>
</resources>