<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <ImageButton
            android:id="@+id/ib_and_image_button"
            android:layout_width="102dp"
            android:layout_height="157dp"
            android:background="@drawable/note_image_button"
            android:contentDescription="@string/and_cd_add_photo"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="40dp"
            android:text="@string/and_tv_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="35dp"
            android:text="@string/and_tv_photo" />
        
        <ImageView
            android:id="@+id/iv_and_image_view"
            android:layout_width="86dp"
            android:layout_height="134dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/and_cd_note_image"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="8dp"
            android:scaleType="centerCrop" />
        
        <Button
            android:id="@+id/btn_and_add_photo"
            android:layout_width="102dp"
            android:layout_height="157dp"
            android:background="@android:color/transparent"
            android:layout_alignParentTop="true" />
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and_tv_additional_details"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_and_note_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
    </LinearLayout>

</LinearLayout>