<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_qsa"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" >

	<RelativeLayout 
	    style="?android:attr/buttonBarStyle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    tools:context="${packageName}.${activityClass}" >
	
	    <TextView
	        android:id="@+id/tv_qsa_message"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginBottom="1dp"
	        android:layout_marginTop="1dp"
	        android:paddingBottom="10dp"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:paddingTop="10dp"
	        android:text="@string/qsa_message"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <LinearLayout
	        android:id="@+id/ll_qsa_buttons"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/tv_qsa_message"
	        android:layout_marginTop="1dp"
	        android:baselineAligned="false"
	        android:divider="?android:attr/dividerVertical"
	        android:dividerPadding="12dp"
	        android:gravity="center_horizontal"
	        android:measureWithLargestChild="true"
	        android:showDividers="none" >
	
			<Button
			    android:id="@+id/btn_qsa_positive"
			    style="?android:attr/buttonBarButtonStyle"
			    android:layout_width="wrap_content"
			    android:layout_height="40dp"
			    android:layout_marginBottom="4dp"
			    android:layout_marginLeft="4dp"
			    android:layout_marginRight="2dp"
			    android:layout_marginTop="4dp"
			    android:layout_weight="1"
			    android:background="@color/black"
			    android:onClick="OnSave"
			    android:paddingLeft="6dp"
			    android:paddingRight="6dp"
			    android:text="@string/qsa_btn_positive"
			    android:textColor="@color/user_button_text"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
	
			<Button
			    android:id="@+id/btn_qsa_negative"
			    style="?android:attr/buttonBarButtonStyle"
			    android:layout_width="wrap_content"
			    android:layout_height="40dp"
			    android:layout_marginBottom="4dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="4dp"
			    android:layout_marginTop="4dp"
			    android:layout_weight="1"
			    android:background="@color/black"
			    android:paddingLeft="1dp"
			    android:paddingRight="0dp"
			    android:text="@string/qsa_btn_negative"
			    android:textColor="@color/user_button_text"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    </LinearLayout>

	</RelativeLayout>

</ScrollView>